--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,22 +2,21 @@
 agp = "8.7.3"
 compose = "1.0.0-beta01"
 converterGson = "2.11.0"
-firebaseBom = "33.8.0"
-firebaseMessaging = "24.1.1"
-foundation = "1.7.7"
+firebaseBom = "33.12.0"
+foundation = "1.7.8"
 kotlin = "2.0.0"
-coreKtx = "1.15.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.0"
-composeBom = "2024.04.01"
+activityCompose = "1.10.1"
+composeBom = "2025.04.00"
 lifecycleViewmodelCompose = "2.8.7"
 lottieCompose = "6.0.0"
-material3 = "1.3.1"
-materialIconsExtended = "1.7.6"
-navigationCompose = "2.8.5"
+material3 = "1.3.2"
+materialIconsExtended = "1.7.8"
+navigationCompose = "2.8.9"
 googleServicesVersion = "4.4.2"
 hiltVersion = "2.52"
 hiltNavigationVersion = "1.2.0"
@@ -34,10 +33,11 @@ androidx-material-icons-extended = { module = "androidx.compose.material:materia
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 compose = { module = "com.github.bumptech.glide:compose", version.ref = "compose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
-firebase-database = { module = "com.google.firebase:firebase-database" }
-firebase-messaging = { module = "com.google.firebase:firebase-messaging", version.ref = "firebaseMessaging" }
+firebase-database-ktx = { module = "com.google.firebase:firebase-database-ktx" }
+firebase-messaging-ktx = { module = "com.google.firebase:firebase-messaging-ktx" }
 firebase-storage-ktx = { module = "com.google.firebase:firebase-storage-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
