--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ lottieCompose = "6.0.0"
 materialIconsExtended = "1.7.8"
 mockitoCore = "5.20.0"
 mockitoKotlin = "6.1.0"
+mockk = "1.13.8"
 navigationCompose = "2.8.9"
 googleServicesVersion = "4.4.2"
 hiltVersion = "2.52"
@@ -61,6 +62,7 @@ hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", ve
 androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
